[package]
name = "lua-strap"
version = "0.1.0"
authors = ["Soviet Kitsune <sovietkitsune@soviet.solutions>"]
edition = "2018"

[dependencies]
log = "0.4"
toml = "0.5"
hlua = "0.3"
git2 = "0.13"
ctrlc = "3.1.7"
indicatif = "0.15"
run_script = "0.6.3"
num-traits = "0.2.12"
is_executable = "0.1.2"
fern = {version = "0.6", features = ["colored"]}
serde = {version = "1.0", features = ["derive"]}

[[bin]]
name = "strap"
path = "src/main.rs"